# abilian-developer-guide

./: Makefile  README.md  backend.rst  checklists.rst  conf.py  design-architecture.rst  devops.rst  documentation.rst  front-end.rst  getting-started.rst  index.rst  intro.rst  misc.rst  mkdocs.yml  modeling.rst  open-source.rst  process.rst  pyproject.toml  python-libraries.rst  python.rst  testing.rst  tools.rst
src/: backend.md  checklists.md  design-architecture.md  devops.md  documentation.md  front-end.md  getting-started.md  index.md  intro.md  learning.md  misc.md  modeling.md  open-questions.md  open-source.md  process-old.md  process.md  python-libraries.md  python.md  testing.md  tools.md
