[tool.poetry]
name = "dev-guide-mkdocs"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@abilian.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.15"
mkdocs-material-extensions = "^1.0.3"
mkdocs = "^1.3.0"
mkdocs-with-pdf = "^0.9.3"

# Useful to migrate from Sphinx
rst-to-myst = "^0.3.2"
Sphinx = "^4.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
